consoidating the fields so api operates with resume_id

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.application.name=backend
+spring.datasource.url=jdbc:postgresql://localhost:5432/smart_job_db
+
+
+# Disable PgAutoVector for now
+spring.autoconfigure.exclude=org.springframework.ai.vectorstore.pgvector.autoconfigure.PgVectorStoreAutoConfiguration
 
 # Database stuff
 spring.datasource.username=smart_user
