worked on skills and projects. Also implemented way to update resume

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,7 +9,10 @@ spring.autoconfigure.exclude=org.springframework.ai.vectorstore.pgvector.autocon
 spring.datasource.username=smart_user
 spring.datasource.password=smart_password
 
-spring.jpa.hibernate.ddl-auto=update
+# Uncomment for dropping and recreate tables
+spring.jpa.hibernate.ddl-auto=create-drop
+
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
